--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style-type: none;
 }
 
 html{
@@ -15,9 +16,13 @@ body{
     color: #fff;
 }
 
-.main{
-    margin: 350px 0 0 0;
+h2{
+    text-align: center;
+    margin: 30px 0;
+    font-size: 4rem;
 }
+
+
 
 .container{
     width: 90%;
@@ -25,9 +30,68 @@ body{
     margin: 0 auto;
 }
 
+
 .time{
     text-align: center;
     font-size: 10rem;
     color: #f5f5f5;
-    text-shadow: 20px 20px 20px #000;
+    text-shadow: 20px 15px 10px #000;
+}
+
+.time-container{
+    background: rgba( 255, 255, 255, 0.05 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 3px );
+    -webkit-backdrop-filter: blur( 3px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.04 );
+    width: 20%;
+    padding: 10px;
+    margin: 15px 0;
+}
+
+.bright{
+    filter: brightness(60%);
+}
+
+.month,.today,.days-of-week{
+    font-size: 5rem;
+    margin: 10px 0 0 0;
+}
+
+.to-do{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.to-do input{
+    width: 50%;
+    padding: 10px;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #fff;
+    border: none;
+    background: rgba( 255, 255, 255, 0.05 );
+    box-shadow: 0 10px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.09 );
+}
+
+.to-do-list{
+    color: #fff;
+    font-size: 5rem;
+    text-align: start;
+    padding: 0 20px;
+    border: none;
+    background: rgba( 255, 255, 255, 0.05 );
+    box-shadow: 0 10px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.09 );
+    margin: 20px auto;
+    width: 80%;
 }
