--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h2{
     -webkit-backdrop-filter: blur( 3px );
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.04 );
-    width: 20%;
+    width: 300px;
     padding: 10px;
     margin: 15px 0;
 }
